<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_textView"
        android:text="@string/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_wrapper"
        android:layout_below="@id/login_textView"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_textView"
            android:hint="@string/username_textview"
            android:inputType="text"
            android:digits="@string/username_string_characters"
            android:imeOptions="actionNext"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_wrapper"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/username_wrapper"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_textView"
            android:hint="@string/password_textview"
            android:imeOptions="actionDone|actionGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:digits="@string/password_string_numbers"
            android:ems="10"/>
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/password_wrapper"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup_button"
        android:layout_marginTop="54dp"
        android:textColor="#0f5caf"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"/>

 <!--   <TextView
        android:id="@+id/username_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_prompt"
        android:layout_below="@+id/username_textView"
        android:layout_alignEnd="@+id/password_textView"
        android:textColor="#641818"
        android:gravity="center_horizontal|left"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_prompt"
        android:layout_below="@+id/password_textView"
        android:textColor="#641818"
        android:gravity="center_horizontal|left"
        android:textSize="14dp"
        android:layout_alignEnd="@+id/password_textView"/> -->
</RelativeLayout>
